--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -13,6 +13,8 @@
     "default_popup": "popup.html"
   },
 
+  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
+
   "permissions": [
     "<all_urls>",
     "alarms",
